--- a/app/src/main/res/layout/fragment_village_government_officials.xml
+++ b/app/src/main/res/layout/fragment_village_government_officials.xml
@@ -57,4 +57,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textTitleGovernmentOfficials"
         tools:layout_editor_absoluteX="16dp" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loadingVillageGovernmentFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:elevation="2dp"
+        android:visibility="visible"
+        app:indicatorColor="@color/primaryGreen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
