--- a/app/src/main/res/layout/fragment_village_head_deciion.xml
+++ b/app/src/main/res/layout/fragment_village_head_deciion.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="@dimen/distance_16"
     android:layout_height="match_parent"
+    android:padding="@dimen/distance_16"
     tools:context=".ui.headman.village_head_decision.VillageHeadDeciionFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -48,12 +48,24 @@
         app:layout_constraintTop_toBottomOf="@+id/textVillage" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listVillageRules"
+        android:id="@+id/listVillageHeadman"
         android:layout_width="match_parent"
-        android:layout_marginTop="@dimen/distance_16"
         android:layout_height="0dp"
-        tools:listitem="@layout/layout_village_rules_list"
+        android:layout_marginTop="@dimen/distance_16"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTitleVillageRules"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:listitem="@layout/layout_village_rules_list" />
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loadingVillageHeadFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:indeterminate="true"
+        android:visibility="visible"
+        app:indicatorColor="@color/primaryGreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
