--- a/app/src/main/res/layout/fragment_village_rules.xml
+++ b/app/src/main/res/layout/fragment_village_rules.xml
@@ -30,7 +30,7 @@
         style="@style/TextTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/wahyu_febri"
+        android:text="Dion"
         app:layout_constraintBottom_toTopOf="@+id/textVillage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textVillageRulesHeadman" />
@@ -46,5 +46,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textVillage" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewVillageRule"
+        app:layout_constraintTop_toBottomOf="@+id/textTitleVillageRules"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/layout_village_rules_list"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/distance_16"/>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loadingVillageRuleFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:elevation="2dp"
+        android:visibility="visible"
+        app:indicatorColor="@color/primaryGreen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
