--- a/app/src/main/res/layout/layout_government_officials_list.xml
+++ b/app/src/main/res/layout/layout_government_officials_list.xml
@@ -78,6 +78,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textNIK">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textPosition"
                 style="@style/TextRegular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
