Load data gambar, memperbaiki tesk yang di tampilkan pada aparatur dan logout

--- a/app/src/main/res/layout/app_bar_home_headman.xml
+++ b/app/src/main/res/layout/app_bar_home_headman.xml
@@ -52,6 +52,15 @@
                     app:layout_constraintStart_toStartOf="@+id/textTitleAplikasiTopBar"
                     app:layout_constraintTop_toBottomOf="@+id/textTitleAplikasiTopBar" />
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/btnLogout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_logout"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.appcompat.widget.Toolbar>
