--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="red">#FF0000</color>
     <color name="darkBlue">#003D75</color>
     <color name="blue">#1964A9</color>
+    <color name="yellowYound">#FDFF8D</color>
 
 
 </resources>
