--- a/app/src/main/res/layout/fragment_detail_social_assitance.xml
+++ b/app/src/main/res/layout/fragment_detail_social_assitance.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/distance_16"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.user.DetailSocialAssitanceFragment">
+    tools:context=".ui.user.detail_social_assistance.DetailSocialAssitanceFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textDetailSocialAssistance"
