--- a/app/src/main/res/layout/layout_confirm_accept_list.xml
+++ b/app/src/main/res/layout/layout_confirm_accept_list.xml
@@ -2,10 +2,10 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:layout_height="wrap_content">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -58,6 +58,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textNotif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Di terima"
