--- a/app/src/main/res/layout/fragment_social_assistance_recipient.xml
+++ b/app/src/main/res/layout/fragment_social_assistance_recipient.xml
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/distance_24"
-            android:visibility="invisible"
+            android:visibility="visible"
 
             app:layout_constraintTop_toBottomOf="@+id/inputSocialAssistance" />
 
@@ -108,6 +108,7 @@
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/grupNoData"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:constraint_referenced_ids="imageNoData,textNoData"/>
